# $Id: Makefile.am 70 2005-03-03 10:34:08Z ka0ttic $

SUBDIRS = . src doc

MAINTAINERCLEANFILES = aclocal.m4 \
		       configure \
		       Makefile.in \
		       config/config.guess \
		       config/ltmain.sh \
		       config/config.sub \
		       config/depcomp \
		       config.h.in \
		       stamp-h.in \
		       *~

EXTRA_DIST = autogen.sh
